Alterando egressos com gem cocoon

--- a/egressos/test/fixtures/contacts.yml
+++ b/egressos/test/fixtures/contacts.yml
@@ -3,9 +3,9 @@
 one:
   tipo: MyString
   valor: MyString
-  course: one
+  student: one
 
 two:
   tipo: MyString
   valor: MyString
-  course: two
+  student: two
