--- a/egressos/Gemfile
+++ b/egressos/Gemfile
@@ -39,6 +39,7 @@ gem 'bootstrap', '~> 4.3.1'
 gem 'jquery-rails'
 gem 'pry-rails'
 gem "bootstrap_form", ">= 4.2.0"
+gem 'cocoon'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
